--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/test?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/test?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=development
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
