--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5InnoDBDialect
 server.port=8080
