--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,7 @@
 	<artifactId>bookinglite</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
 	<name>bookinglite</name>
-	<description></description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -26,7 +24,6 @@
 	</properties>
 
 	<dependencies>
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -71,6 +68,18 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.11</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.2.0.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>1.2.0.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -81,6 +90,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
