--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,23 @@
 spring.datasource.url=jdbc:mysql://localhost/bookinglite?useSSL=false&createDatabaseIfNotExist=true&useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=shadow12345
+spring.datasource.password=development
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5InnoDBDialect
+
 server.port=8080
-app.jwtSecret= askldfaklfnasf;nafajklfajkf
-app.jwtExpiration = 3600000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bookinglitetest@gmail.com
+spring.mail.password=1234QwEr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+app.jwtSecret=askldfaklfnasf;nafajklfajkf
+app.jwtExpiration=3600000
+app.emailverification=true
+app.hosturl=http://localhost:8080
