add logging and exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mail.username=bookinglitetest@gmail.com
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
+spring.profiles.active=local
 app.jwtSecret=askldfaklfnasf;nafajklfajkf
 app.jwtExpiration=3600000
 app.emailverification=false
